--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,6 +11,12 @@ MASTER_IP_START = 10
 NODE_IP_START = 20
 LB_IP_START = 30
 
+$script = <<-SCRIPT
+rm /etc/machine-id
+systemd-machine-id-setup
+SCRIPT
+
+
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
@@ -23,7 +29,11 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   # config.vm.box = "base"
-  config.vm.box = "ubuntu/bionic64"
+  config.vm.box = "mpasternak/focal64-arm"
+  # config.vm.provision "shell", inline: <<-SHELL
+  #  rm /etc/machine-id
+  #  systemd-machine-id-setup
+  #SHELL
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -57,7 +67,7 @@ Vagrant.configure("2") do |config|
   (1..NUM_MASTER_NODE).each do |i|
       config.vm.define "master-#{i}" do |node|
         # Name shown in the GUI
-        node.vm.provider "virtualbox" do |vb|
+        node.vm.provider "parallels" do |vb|
             vb.name = "kubernetes-ha-master-#{i}"
             vb.memory = 2048
             vb.cpus = 2
@@ -65,40 +75,32 @@ Vagrant.configure("2") do |config|
         node.vm.hostname = "master-#{i}"
         node.vm.network :private_network, ip: IP_NW + "#{MASTER_IP_START + i}"
         node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
-
-        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh" do |s|
-          s.args = ["enp0s8"]
-        end
-
+        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh" 
         node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
         node.vm.provision "file", source: "./ubuntu/cert_verify.sh", destination: "$HOME/"
-
+        node.vm.provision "shell", inline: $script 
       end
   end
 
   # Provision Load Balancer Node
   config.vm.define "loadbalancer" do |node|
-    node.vm.provider "virtualbox" do |vb|
+    node.vm.provider "parallels" do |vb|
         vb.name = "kubernetes-ha-lb"
         vb.memory = 512
         vb.cpus = 1
     end
     node.vm.hostname = "loadbalancer"
     node.vm.network :private_network, ip: IP_NW + "#{LB_IP_START}"
-	node.vm.network "forwarded_port", guest: 22, host: 2730
-
-    node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh" do |s|
-      s.args = ["enp0s8"]
-    end
-
+    node.vm.network "forwarded_port", guest: 22, host: 2730
+    node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
     node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-
+    node.vm.provision "shell", inline: $script 
   end
 
   # Provision Worker Nodes
   (1..NUM_WORKER_NODE).each do |i|
     config.vm.define "worker-#{i}" do |node|
-        node.vm.provider "virtualbox" do |vb|
+        node.vm.provider "parallels" do |vb|
             vb.name = "kubernetes-ha-worker-#{i}"
             vb.memory = 512
             vb.cpus = 1
@@ -106,16 +108,13 @@ Vagrant.configure("2") do |config|
         node.vm.hostname = "worker-#{i}"
         node.vm.network :private_network, ip: IP_NW + "#{NODE_IP_START + i}"
 		node.vm.network "forwarded_port", guest: 22, host: "#{2720 + i}"
-
-        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh" do |s|
-          s.args = ["enp0s8"]
-        end
-
+        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
         node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
         node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
         node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
         node.vm.provision "file", source: "./ubuntu/cert_verify.sh", destination: "$HOME/"
-
+        node.vm.provision "shell", inline: $script 
     end
   end
 end
+
