--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,15 +1,5 @@
 # -*- mode: ruby -*-
-# vi:set ft=ruby sw=2 ts=2 sts=2:
-
-# Define the number of master and worker nodes
-# If this number is changed, remember to update setup-hosts.sh script with the new hosts IP details in /etc/hosts of each VM.
-NUM_MASTER_NODE = 2
-NUM_WORKER_NODE = 2
-
-IP_NW = "192.168.5."
-MASTER_IP_START = 10
-NODE_IP_START = 20
-LB_IP_START = 30
+# vi: set ft=ruby :
 
 $script = <<-SCRIPT
 rm /etc/machine-id
@@ -21,105 +11,88 @@ sudo systemctl enable ssh
 sudo systemctl start ssh
 SCRIPT
 
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
 Vagrant.configure("2") do |config|
-  # The most common configuration options are documented and commented below.
-  # For a complete reference, please see the online documentation at
-  # https://docs.vagrantup.com.
-
-  # Every Vagrant development environment requires a box. You can search for
-  # boxes at https://vagrantcloud.com/search.
-  # config.vm.box = "base"
   config.vm.box = "mpasternak/focal64-arm"
-  # config.vm.provision "shell", inline: <<-SHELL
-  #  rm /etc/machine-id
-  #  systemd-machine-id-setup
-  #SHELL
-
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
   config.vm.box_check_update = false
 
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
-
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
-  #
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Provision Master Nodes
-  (1..NUM_MASTER_NODE).each do |i|
-      config.vm.define "master-#{i}" do |node|
-        # Name shown in the GUI
-        node.vm.provider "parallels" do |vb|
-            vb.name = "kubernetes-ha-master-#{i}"
-            vb.memory = 2048
-            vb.cpus = 2
-        end
-        node.vm.hostname = "master-#{i}"
-        node.vm.network :private_network, ip: IP_NW + "#{MASTER_IP_START + i}"
-        node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
-        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh" 
-        node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-        node.vm.provision "file", source: "./ubuntu/cert_verify.sh", destination: "$HOME/"
-        node.vm.provision "shell", inline: $script 
+    config.vm.define "master-1" do |node|
+      node.vm.provider "parallels" do |vb|
+          vb.name = "kubernetes-master-1"
+          vb.memory = 2048
+          vb.cpus = 2
       end
-  end
-
-  # Provision Load Balancer Node
-  config.vm.define "loadbalancer" do |node|
-    node.vm.provider "parallels" do |vb|
-        vb.name = "kubernetes-ha-lb"
-        vb.memory = 512
-        vb.cpus = 1
+      node.vm.hostname = "master-1"
+      node.vm.network :private_network, ip: "192.168.5.21"
+      node.vm.network "forwarded_port", guest: 22, host: "2711"
+      node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
+      node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
+      node.vm.provision "shell", inline: $script
     end
-    node.vm.hostname = "loadbalancer"
-    node.vm.network :private_network, ip: IP_NW + "#{LB_IP_START}"
-    node.vm.network "forwarded_port", guest: 22, host: 2730
-    node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
-    node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-    node.vm.provision "shell", inline: $script 
-  end
 
-  # Provision Worker Nodes
-  (1..NUM_WORKER_NODE).each do |i|
-    config.vm.define "worker-#{i}" do |node|
+    config.vm.define "worker-1" do |node|
+      node.vm.provider "parallels" do |vb|
+          vb.name = "kubernetes-worker-1"
+          vb.memory = 512
+          vb.cpus = 1
+      end
+      node.vm.hostname = "worker-1"
+      node.vm.network :private_network, ip: "192.168.5.11"
+      node.vm.network "forwarded_port", guest: 22, host: "2721"
+      node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
+      node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
+      node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+      node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
+      node.vm.provision "shell", inline: $script
+      end
+
+      config.vm.define "worker-2" do |node|
         node.vm.provider "parallels" do |vb|
-            vb.name = "kubernetes-ha-worker-#{i}"
+            vb.name = "kubernetes-worker-2"
             vb.memory = 512
             vb.cpus = 1
         end
-        node.vm.hostname = "worker-#{i}"
-        node.vm.network :private_network, ip: IP_NW + "#{NODE_IP_START + i}"
-		node.vm.network "forwarded_port", guest: 22, host: "#{2720 + i}"
+        node.vm.hostname = "worker-2"
+        node.vm.network :private_network, ip: "192.168.5.12"
+        node.vm.network "forwarded_port", guest: 22, host: "2722"
         node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
         node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
         node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
         node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
-        node.vm.provision "file", source: "./ubuntu/cert_verify.sh", destination: "$HOME/"
-        node.vm.provision "shell", inline: $script 
-    end
-  end
-end
+        node.vm.provision "shell", inline: $script
+        end
 
+
+      config.vm.define "worker-3" do |node|
+        node.vm.provider "parallels" do |vb|
+            vb.name = "kubernetes-worker-3"
+            vb.memory = 512
+            vb.cpus = 1
+        end
+        node.vm.hostname = "worker-3"
+        node.vm.network :private_network, ip: "192.168.5.13"
+        node.vm.network "forwarded_port", guest: 22, host: "2723"
+        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
+        node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
+        node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+        node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
+        node.vm.provision "shell", inline: $script
+        end
+
+
+        config.vm.define "worker-4" do |node|
+          node.vm.provider "parallels" do |vb|
+              vb.name = "kubernetes-worker-4"
+              vb.memory = 512
+              vb.cpus = 1
+          end
+          node.vm.hostname = "worker-4"
+          node.vm.network :private_network, ip: "192.168.5.14"
+          node.vm.network "forwarded_port", guest: 22, host: "2724"
+          node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
+          node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
+          node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+          node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
+          node.vm.provision "shell", inline: $script
+          end
+      
+end     
