--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,16 +4,21 @@
 $script = <<-SCRIPT
 rm /etc/machine-id
 systemd-machine-id-setup
-sudo apt update -y
-sudo apt install network-manager -y
-sudo install openssh-server -y
+sudo sed -i "s:nameserver 127.0.0.53:nameserver 8.8.8.8:g" /etc/resolv.conf
+sudo netplan apply
+sudo apt update 
+sudo apt install network-manager 
+sudo dpkg-reconfigure network-manager
+sudo install openssh-server 
 sudo systemctl enable ssh 
 sudo systemctl start ssh
 SCRIPT
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "mpasternak/focal64-arm"
+  #config.vm.box = "mpasternak/focal64-arm"
+  config.vm.box = "luminositylabsllc/ubuntu-20.04-arm64"
   config.vm.box_check_update = false
+  config.vm.boot_timeout = 600
 
     config.vm.define "master-1" do |node|
       node.vm.provider "parallels" do |vb|
@@ -32,15 +37,15 @@ Vagrant.configure("2") do |config|
     config.vm.define "worker-1" do |node|
       node.vm.provider "parallels" do |vb|
           vb.name = "kubernetes-worker-1"
-          vb.memory = 512
-          vb.cpus = 1
+          vb.memory = 2048
+          vb.cpus = 2
       end
       node.vm.hostname = "worker-1"
       node.vm.network :private_network, ip: "192.168.5.11"
       node.vm.network "forwarded_port", guest: 22, host: "2721"
       node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
       node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-      node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+      ## node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
       node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
       node.vm.provision "shell", inline: $script
       end
@@ -48,15 +53,15 @@ Vagrant.configure("2") do |config|
       config.vm.define "worker-2" do |node|
         node.vm.provider "parallels" do |vb|
             vb.name = "kubernetes-worker-2"
-            vb.memory = 512
-            vb.cpus = 1
+            vb.memory = 2048
+            vb.cpus = 2
         end
         node.vm.hostname = "worker-2"
         node.vm.network :private_network, ip: "192.168.5.12"
         node.vm.network "forwarded_port", guest: 22, host: "2722"
         node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
         node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-        node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+        ##node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
         node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
         node.vm.provision "shell", inline: $script
         end
@@ -65,34 +70,33 @@ Vagrant.configure("2") do |config|
       config.vm.define "worker-3" do |node|
         node.vm.provider "parallels" do |vb|
             vb.name = "kubernetes-worker-3"
-            vb.memory = 512
-            vb.cpus = 1
+            vb.memory = 2048
+            vb.cpus = 2
         end
         node.vm.hostname = "worker-3"
         node.vm.network :private_network, ip: "192.168.5.13"
         node.vm.network "forwarded_port", guest: 22, host: "2723"
         node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
         node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-        node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+        ##node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
         node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
         node.vm.provision "shell", inline: $script
         end
 
+      config.vm.define "worker-4" do |node|
+        node.vm.provider "parallels" do |vb|
+            vb.name = "kubernetes-worker-4"
+            vb.memory = 2048
+            vb.cpus = 2
+        end
+        node.vm.hostname = "worker-4"
+        node.vm.network :private_network, ip: "192.168.5.14"
+        node.vm.network "forwarded_port", guest: 22, host: "2723"
+        node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
+        node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
+        ##node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
+        node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
+        node.vm.provision "shell", inline: $script
+        end
 
-        config.vm.define "worker-4" do |node|
-          node.vm.provider "parallels" do |vb|
-              vb.name = "kubernetes-worker-4"
-              vb.memory = 512
-              vb.cpus = 1
-          end
-          node.vm.hostname = "worker-4"
-          node.vm.network :private_network, ip: "192.168.5.14"
-          node.vm.network "forwarded_port", guest: 22, host: "2724"
-          node.vm.provision "setup-hosts", :type => "shell", :path => "ubuntu/vagrant/setup-hosts.sh"
-          node.vm.provision "setup-dns", type: "shell", :path => "ubuntu/update-dns.sh"
-          node.vm.provision "install-docker", type: "shell", :path => "ubuntu/install-docker-2.sh"
-          node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "ubuntu/allow-bridge-nf-traffic.sh"
-          node.vm.provision "shell", inline: $script
-          end
-      
 end     
